--- a/demo.html
+++ b/demo.html
@@ -132,9 +132,15 @@
     <div class="col_12 omega">
 		<h4>Why?</h4>
         <p>I've been looking at tables in responsive design for some time. This concept has been floating around for a while now - JQuery Mobile uses the technique of inserting a small element in to the table. What I wasn't so keen on was the table presentation in linear format, where a user has to scroll for miles to see the table details. So, I took the jQuery Mobile concept, and paginated the table at smaller screen.</p>
-        <h4>The Code</h4>
-        <p>You can grab the code, and this demo on github. Feel free to use it however you please. It's open source, and released under a creative commons licence - see the licence details below.</p>
-        <a rel="license" href="http://creativecommons.org/licenses/by/2.0/uk/deed.en_GB"><img alt="Creative Commons Licence" style="border-width:0" src="http://i.creativecommons.org/l/by/2.0/uk/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/2.0/uk/deed.en_GB">Creative Commons Attribution 2.0 UK: England &amp; Wales License</a>.
+         <h4>The Code</h4>
+        <p>You can grab the code, and this demo on <a href="https://github.com/markAPR/responsive-tables">github</a>. Feel free to use it however you please. It's open source, and released under a MIT Licence - See Below</p>
+       <p>
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</p>
+
+<p>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.</p>
+
+<p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. </p>
+	</div>
 	</div>
   </div>
 </div><!--class="container" -->
